--- a/Face/Podfile
+++ b/Face/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+# platform :iOS, '9.0'
 
 target 'Face' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -17,5 +17,7 @@ target 'Face' do
   end
 
 pod 'GoogleMLKit/FaceDetection', '2.6.0'
+
+
 
 end
